feat: añadir mas test en solicitudControllerTest para 80% coverage